--- a/ballotPlanner/UserSetUp.storyboard
+++ b/ballotPlanner/UserSetUp.storyboard
@@ -157,20 +157,6 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ballot_planner_logo" translatesAutoresizingMaskIntoConstraints="NO" id="RtP-K3-7s4">
                                 <rect key="frame" x="30" y="145.5" width="708" height="297.5"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0LR-vR-ckg">
-                                <rect key="frame" x="283.5" y="625.5" width="201" height="47"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
-                                <state key="normal" title="Let's Get Started">
-                                    <color key="titleColor" red="0.29411764709999999" green="0.6588235294" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <variation key="heightClass=regular-widthClass=regular">
-                                    <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="25"/>
-                                </variation>
-                                <connections>
-                                    <segue destination="WjS-S4-TFs" kind="show" id="3BB-3C-cc8"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kkd-Cf-dOc">
                                 <rect key="frame" x="196.5" y="474" width="375" height="131.5"/>
                                 <constraints>
@@ -187,6 +173,23 @@ voting day.</string>
                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="24"/>
                                 </variation>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0LR-vR-ckg">
+                                <rect key="frame" x="270" y="625.5" width="228" height="47"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="228" id="Usq-sS-1im"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
+                                <state key="normal" title="Let's Get Started">
+                                    <color key="titleColor" red="0.29411764709999999" green="0.6588235294" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="25"/>
+                                </variation>
+                                <connections>
+                                    <segue destination="WjS-S4-TFs" kind="show" id="3BB-3C-cc8"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.29411764709999999" green="0.6588235294" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -207,7 +210,7 @@ voting day.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hmx-wC-3Ih" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1530.4000000000001" y="-36.431784107946029"/>
+            <point key="canvasLocation" x="-1530.46875" y="-36.9140625"/>
         </scene>
         <!--User Party Controller-->
         <scene sceneID="EVA-c3-lJ9">
@@ -286,17 +289,6 @@ voting day.</string>
                                     <action selector="buttonTapped:" destination="WjS-S4-TFs" eventType="touchUpInside" id="IHZ-hn-WeY"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="5" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uR4-Pv-a0k">
-                                <rect key="frame" x="122" y="469" width="132" height="40"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
-                                <state key="normal" title="I'm Independent">
-                                    <color key="titleColor" red="0.29411764709999999" green="0.6588235294" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="buttonTapped:" destination="WjS-S4-TFs" eventType="touchUpInside" id="2Ec-SS-Jun"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tFf-fs-l03">
                                 <rect key="frame" x="272.5" y="364" width="208" height="157"/>
                                 <subviews>
@@ -363,6 +355,20 @@ voting day.</string>
                                     <segue destination="Niz-xc-vEz" kind="show" id="4Bp-mz-Vwh"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uR4-Pv-a0k">
+                                <rect key="frame" x="299" y="529" width="170" height="36"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="170" id="Fh8-tY-s1s"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
+                                <state key="normal" title="I'm Independent">
+                                    <color key="titleColor" red="0.29411764709999999" green="0.6588235294" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="WjS-S4-TFs" eventType="touchUpInside" id="2Ec-SS-Jun"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.29411764709999999" green="0.6588235294" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -403,7 +409,7 @@ voting day.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WPa-0K-Ej3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-712.79999999999995" y="-36.431784107946029"/>
+            <point key="canvasLocation" x="-713.28125" y="-36.9140625"/>
         </scene>
     </scenes>
     <resources>
